--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -57,12 +57,16 @@ Compute:
 We can validate with several answerables in an environment:
 \begin{verbatim}
 \begin{question}
-For each of the following functions, find $x$ such that it is a critical point, or write ``NA'' if none exists.
+For each of the following functions, find $x$ such that it is a
+critical point, or write ``NA'' if none exists.
 \begin{enumerate}
-  \item For $f(x) = |x-4|$, $x$ is a critical point when $x=\answer{4}$.
-  \item For $g(x) = x^2-4x+1$, $x$ is a critical point when $x=\answer{2}$.
-  \item For $h(x) = 3x-2$, $x$ is a critical point when $x=\answer[format=string]{NA}$.
-Find $x$ such that where $f(x) = |x-4|$ has a critical point or
+  \item For $f(x) = |x-4|$, $x$ is a critical point when 
+  $x=\answer{4}$.
+  \item For $g(x) = x^2-4x+1$, $x$ is a critical point when 
+  $x=\answer{2}$.
+  \item For $h(x) = 3x-2$, $x$ is a critical point when 
+  $x=\answer[format=string]{NA}$.
+\end{enumerate}
 \end{question}
 \end{verbatim}
 
