--- a/ximeraUserManual/manual.sty
+++ b/ximeraUserManual/manual.sty
@@ -114,7 +114,6 @@
 
 
 
-
 \fancyhead[L]{\sffamily\flushleft%You cannot use input or otherinput here
 \resizebox{!}{.7em}{\begin{tikzpicture}[x=1cm,y=1cm]
   \begin{scope}
@@ -159,7 +158,7 @@
   \end{scope}
   %\draw[step=1cm,gray,very thin] (0,0) grid (71,10);
 \end{tikzpicture}}%
-\resizebox{!}{.7em}{\lsstyle User\,Manual}\hfill \MONTH~\thedate \\[-.1cm]
+\resizebox{!}{.7em}{\lsstyle User\,Manual}\hfill \makeatletter\@title\makeatother \hfill \MONTH~\thedate \\[-.1cm]
 \rule{\textwidth}{.1cm}\\[0cm]\rmfamily
 Email:~{\tt ximera@math.osu.edu} \hfill Website:~{\tt https://github.com/ximeraProject/}
 }
