--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -102,9 +102,7 @@ are for building custom validators and are beyond the scope of this document.
 \end{verbatim}
 \end{warning}
 
-\paragraph{Validating an answer}
-
-Ximera uses more than a dozen algorithms to check if the student's provided
+\paragraph{Validating an answer} is achieved by client-side JavaScript. Around one dozen algorithms to check if the student's provided
 answer is mathematically equivalent to the content author's provided answer. If
 any report the answer as being correct, then it is marked as correct.
 
