--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -145,7 +145,7 @@ Finally to deploy:
 \begin{verbatim}
 git add -u && git commit -m "this is my change" && git push
 \end{verbatim}
-may help.
+may help. Also, you can check your personal GitHub page to ensure files are in the repository.
 \item Press \textit{Bake}.
 \item Press \textit{Serve}.
 \end{enumerate}
