--- a/ximeraUserManual/commonUseCases/commonUseCases.tex
+++ b/ximeraUserManual/commonUseCases/commonUseCases.tex
@@ -223,18 +223,17 @@ arithmetic, see \link%
     Arithmetic}]
 {https://docs.oracle.com/cd/E19957-01/806-3568/ncg_goldberg.html}.
 
-\paragraph{Answer box size}
-If you are in a situation where you want a student to solve for a portion
-of an expression or formula, you should place parenthesis around the answer
-box. Since the answer box is a different size than the answer you should use
+\paragraph{Parenthesis around answer boxes} are good to use, especially if your answer is negative and part of an expression.
+
+Since the answer box is a different size than the answer you should use
 \verb!\left! and \verb!\right! to do it like
 this:
 \begin{verbatim}
-\[
-  \left(\answer{42}\right)
-\]
+  \begin{exercise}
+    3 + \left(\answer{-2}\right) = 1
+  \end{exercise}
 \end{verbatim}
-and here we see this in context:
+and here we see this in a more sophisticated context:
 %% Inspired by an exercise of Jim Talamo
 \begin{verbatim}
 \begin{exercise}
